// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation doesnt crush if an mutation with a requestKey doesnt exist 1`] = `<div />`;

exports[`Mutation renders custom component as prop with extra prop 1`] = `
<div>
  loading
   
  error
   
  extra
</div>
`;

exports[`Mutation renders loading and error 1`] = `
<div>
  loading
  error
</div>
`;

exports[`Mutation renders loading and error of mutation with requestKey 1`] = `
<div>
  loading
  error
</div>
`;
